--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ ul li a {
 
 /* hero */
 .hero {
-  background-image: url("../images/mobile/image-header.jpg");
+  background-image: url("./images/mobile/image-header.jpg");
   background-size: cover;
   background-position: center;
   height: 100vh;
